examples/0.out
Success 31, Errors 3, Ignores 2
Success 31: 
token type keyword, token value is "read", line number is 5
token type keyword, token value is "write", line number is 6
token type keyword, token value is "int", line number is 7
token type keyword, token value is "real", line number is 8
token type keyword, token value is "if", line number is 9
token type keyword, token value is "else", line number is 10
token type keyword, token value is "while", line number is 11
token type computing, token value is "+", line number is 12
token type computing, token value is "-", line number is 13
token type computing, token value is "*", line number is 14
token type computing, token value is "/", line number is 15
token type operator, token value is "=", line number is 16
token type comparation, token value is "==", line number is 17
token type comparation, token value is "<>", line number is 18
token type comparation, token value is ">=", line number is 19
token type comparation, token value is "<=", line number is 20
token type comparation, token value is ">", line number is 21
token type comparation, token value is "<", line number is 22
token type parenthesis, token value is "(", line number is 23
token type parenthesis, token value is ")", line number is 24
token type arraystart, token value is "[", line number is 25
token type arrayend, token value is "]", line number is 26
token type separation, token value is ";", line number is 27
token type identify, token value is "n", line number is 28
token type identify, token value is "n1", line number is 29
token type identify, token value is "n_n", line number is 30
token type integer, token value is "1", line number is 31
token type real, token value is "1.1", line number is 32
token type integer, token value is "1", line number is 37
token type identify, token value is "n", line number is 37
token type real, token value is "1.11", line number is 40
Ignore 2: 
line 34: ignore char "~" Error
line 35: ignore char "&" Error
Error 3: 
line 38: "IDENTIFY" Error
line 39: "IDENTIFY" Error
line 40: "." Error
DONE
