examples/0.cmm
/*
   这是一个样例程序，包含了所有保留字、忽略字符样例和出错样例
*/
// 以下是所有保留字
read
write
int
real
if
else
while
+
-
*
/
=
==
<>
>=
<=
>
<
(
)
[
]
;
n
n1
n_n
1
1.1
// 以下是忽略的字符
~
&
// 以下是错误样例
1n
_n
n_
1.1.1
